# ffxiv-best-craft

./: .gitignore  .npmrc  .prettierignore  .prettierrc.toml  .yarnrc.yml  Cargo.toml  README.md  auto-imports.d.ts  blockly-extensions.d.ts  blockly-theme-modern.d.ts  components.d.ts  fco.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  versions.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build_tauri.yml  build_web.yml  deploy.yml  npm-publish-github-packages.yml  publish.yml  tauri.yml
src/: App.vue  Automation.ts  Craft.ts  Solver.ts  env.d.ts  fluent.ts  lang.ts  main.ts  router.ts  store.ts  update.ts
src-data/: Cargo.toml
src-data/.cargo/: config.toml
src-data/src/: main.rs  metadata.rs
src-db/: Cargo.toml  README.md
src-db/src/: collectables_shop_refine.rs  craft_types.rs  item_action.rs  item_food.rs  item_food_effect.rs  item_search_categories.rs  item_ui_categories.rs  item_with_amount.rs  items.rs  lib.rs  prelude.rs  recipe_level_tables.rs  recipes.rs  wks_mission_recipe.rs  wks_mission_to_do.rs  wks_mission_unit.rs
src-libs/: Cargo.toml
src-libs/src/: lib.rs
src-libs/src/analyzer/: mod.rs  rand_simulations.rs  scope_of_application.rs
src-libs/src/solver/: depth_first_search_solver.rs  mod.rs  normal_progress_solver.rs  normal_quality_solver.rs  raphael.rs  reflect_solver.rs  rika_solver.rs
src-server/: .gitignore  Cargo.toml
src-server/src/: main.rs
src-server/src/db/: categories.rs  collectables_shop_refine.rs  craft_types.rs  crafttypes.rs  item_action.rs  item_food.rs  item_food_effect.rs  item_search_categories.rs  item_ui_categories.rs  item_with_amount.rs  itemaction.rs  itemfood.rs  itemfood_effect.rs  itemfoodeffect.rs  items.rs  itemsearchcategories.rs  itemuicategories.rs  itemwithamount.rs  mod.rs  prelude.rs  recipe_level_tables.rs  recipeleveltables.rs  recipes.rs
src-tauri/: .env  Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/assets/: Recipe.csv  xiv.db
src-tauri/capabilities/: default.json  migrated.json  migrated.toml
src-tauri/icons/: icon.icns
src-tauri/src/: advanced_solver.rs  depth_first_search.rs  depth_first_search_solver.rs  dp_solver.rs  dynamic_programing_solver.rs  hard_recipe.rs  main.rs  memoization_solver.rs  memory_search_solver.rs  muscle_memory_solver.rs  normal_quality_solver.rs  ordinary_solver.rs  preprogress_solver.rs  reflect_solver.rs  rika_solver.rs  rika_tnze_solver.rs  solver.rs  start_solver.rs
src-tauri/src/db/: categories.rs  collectables_shop_refine.rs  craft_types.rs  item_action.rs  item_food.rs  item_food_effect.rs  item_search_categories.rs  item_ui_categories.rs  item_with_amount.rs  items.rs  mod.rs  prelude.rs  recipe_level_tables.rs  recipes.rs
src-tauri/src/hard_recipe/: dp.rs  mod.rs
src-tauri/src/rika_solver/: mod.rs  solver.rs
src-wasm/: Cargo.toml
src-wasm/pkg/: best_craft.d.ts  best_craft.js  best_craft_bg.js  best_craft_bg.wasm  best_craft_bg.wasm.d.ts  package.json
src-wasm/src/: lib.rs
src/assets/data/: meal.json  potions.json
src/assets/locales/: en-US.ftl  en.ftl  ja-JP.ftl  ja.ftl  zh-CN.ftl  zh-TW.ftl
src/assets/locales/zh-CN/: ff14_crafting_assistant.ftl
src/components/: BillOfMaterial.vue  DesktopEditionDownload.vue  FeedbackEmail.vue  Gearset.vue  Gearsets.vue  Menu.vue  Recipe.vue  RecipePanel.vue  Settings.vue  SupportUs.vue
src/components/attr-enhancer/: AttrEnhSelector.vue  Enhancer.ts
src/components/automation/: Automation.vue  Context.ts  InGameContext.ts  block_defines.json  toolbox.json
src/components/bill-of-material/: BillOfMaterial.vue  Item.vue
src/components/bom/: Curves.vue  Item.vue  Selector.vue
src/components/designer/: Action.vue  ActionInfo.vue  ActionPanel.vue  ActionQueue.vue  Analyzers.vue  Buffs.vue  CollectabilityRefineMark.vue  Condition.vue  Designer.vue  DesignerSkeleton.vue  DurabilityProgressBar.vue  InitialQualitySetting.vue  MacroExporter.vue  MacroImporter.vue  MarcoExporter.vue  MarcoInfo.vue  Page.vue  QueueStatus.vue  Sidebar.vue  Simulator.vue  SolverList.vue  Split.vue  StagedActionQueueItem.vue  StatusBar.vue  consts.ts  hqPercentage.ts  injectionkeys.ts  simulate.ts  types.ts
src/components/designer/solvers/: DfsSolver.vue  DpSolver.vue  List.vue  RaphaelSolver.vue
src/components/designer/tabs/: Analyzers.vue  AttrEnhSelector.vue  AttrEnhSelectorOption.vue  InitialQualitySetting.vue  MacroExporter.vue  MacroImporter.vue  StagedActionQueueItem.vue
src/components/guide/: Guide.vue  Result.vue  SeeRecipe.vue  Solving.vue  Welcome.vue
src/components/recipe-manager/: ConfirmDialog.vue  CustomizeRecipe.vue  FavoriteRecipePanel.vue  RecipePanel.vue  beta-xivapi-source.ts  common.ts  local-source.ts  remote-source.ts  source.ts  web-source.ts  yyyygames-source.ts
src/datasource/: beta-xivapi-source.ts  local-source.ts  remote-source.ts  source.ts  web-source.ts
src/eastereggs/: e1.ts  e2.ts  index.ts
src/fco/: App.vue  main.ts  router.ts
src/fco/components/: ActionPanel.vue  Analyzer.vue  Attributes.vue  CraftingState.vue  JobSelect.vue  Macros.vue  MealAndMedicinesSelect.vue  MealSelect.vue  Navicator.vue  RecipeSelect.vue  SolveModal.vue
src/fco/pages/: CrafterAttributes.vue  Simulator.vue
src/fco/stores/: simulator.ts
src/libs/: Analyzer.ts  AnalyzerWorker.ts  Consts.ts  Craft.ts  Enhancer.ts  Gearsets.ts  Solver.ts  SolverWorker.ts  Utils.ts  WorkerSolver.ts  ZhConvertor.ts
src/pages/: Bom.vue  Gearsets.vue  Settings.vue  Welcome.vue
src/stores/: bom.ts  designer.ts  favorites.ts  gearsets.ts  guide.ts  settings.ts
