[workspace]
resolver = "2"
members = ["src-libs", "src-tauri", "src-wasm", "src-server", "src-db"]

[workspace.dependencies]
sea-orm = { version = "1.1", features = ["runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.47"

[profile.release]
lto = true
