[package]
name = "app-data"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.12.0"
thiserror = "2.0.18"

app-db = { path = "../src-db" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "debug-print",
    "sqlite-use-returning-for-3_35",
] }
itertools = "0.14.0"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"


[dependencies.ironworks]
git = "https://github.com/ackwell/ironworks"
branch = "main"
features = ["excel", "sqpack", "zipatch"]

[dependencies.ironworks_schema]
git = "https://github.com/ackwell/ironworks"
branch = "main"
features = ["exdschema"]
