[package]
name = "app-libs"
version = "0.0.0"
edition = "2021"
authors = ["Tnze"]
license = "AGPL"

[dependencies]
ffxiv-crafting = { version = '7.2.0', features = ["serde-support"] }
serde = { workspace = true }
micro_ndarray = "0.6"
rand = "0.9.2"

raphael-solvers = { git = "https://github.com/KonaeAkira/raphael-rs.git", package = "raphael-solver", tag = "v0.22.3" }
raphael-simulator = { git = "https://github.com/KonaeAkira/raphael-rs.git", package = "raphael-sim", tag = "v0.22.3" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
num_cpus = "1.17"
