[package]
name = "web-source-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["tokio-macros"] }
sea-orm = { version = "0.12.4", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
] }
ffxiv-crafting = { version = "6.3.3", features = ["serde-support"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
salvo = { version = "0.58.2", features = ["affix", "cors"] }
dotenvy = "0.15.7"
