[package]
name = "web-source-server"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44", features = ["tokio-macros"] }
sea-orm = { version = "1.1", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
salvo = { version = "0.78", features = ["affix-state", "cors"] }
dotenvy = "0.15.7"
