[package]
name = "web-source-server"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-db = { path = "../src-db" }

sea-orm = { workspace = true, features = ["sqlx-mysql"] }
tokio = { workspace = true, features = ["tokio-macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

salvo = { version = "0.79", features = ["affix-state", "cors"] }
dotenvy = "0.15.7"
toml = "0.8.23"
