[package]
authors = ["Tnze"]
default-run = "app"
description = "BestCraft rust backend"
edition = "2021"
license = "AGPL-3.0-or-later"
name = "app"
repository = "https://github.com/Tnze/ffxiv-best-craft"
rust-version = "1.71"
version = "0.12.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
crossbeam-channel = "0.5.8"
ffxiv-crafting = { version = "6.3.3", features = ["serde-support"] }
futures = "0.3"
micro_ndarray = "0.6.0"
msgbox = "0.7.0"
num_cpus = "1.16.0"
percent-encoding = "2.3.0"
rand = "0.8.5"
sea-orm = { version = "0.12.4", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [
  "shell-open",
  "clipboard-write-text",
  "fs-all",
  "dialog-open",
  "dialog-save",
  "devtools",
  "updater",
] }
tokio = "1.33.0"
window-vibrancy = "0.4"

# internal deps
app-libs = { path = "../src-libs" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
