[package]
authors = ["Tnze"]
default-run = "app"
description = "BestCraft rust backend"
edition = "2021"
license = "AGPL-3.0-or-later"
name = "app"
repository = "https://github.com/Tnze/ffxiv-best-craft"
rust-version = "1.71"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
crossbeam-channel = "0.5.15"
futures = "0.3"
micro_ndarray = "0.6"
native-dialog = "0.9.0"
num_cpus = "1.17"
percent-encoding = "2.3.1"
rand = "0.9.1"
sea-orm = { version = "1.1.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.45"
window-vibrancy = "0.6"

tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"

# internal deps
app-libs = { path = "../src-libs" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
