cargo-features = ["per-package-target"]

[package]
name = "app-wasm"
version = "0.0.0"
edition = "2021"
authors = ["Tnze"]
default-target = "wasm32-unknown-unknown"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
tsify = "0.4.5"
app-libs = { path = "../src-libs" }
ffxiv-crafting = { version = "6.5.0", features = ["serde-support"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]
