cargo-features = ["per-package-target"]

[package]
name = "app-wasm"
version = "0.0.0"
edition = "2021"
authors = ["Tnze"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-libs = { path = "../src-libs" }

serde = { workspace = true }

serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
tsify = "0.5.6"
rand = "0.9.2"

[lib]
crate-type = ["cdylib"]
